# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import clubsRouter from "./clubs";
+import squadRouter from "./squad";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(clubsRouter);
+router.use(squadRouter);
 
 export default router;
